@@ -35,6 +35,7 @@ CAY-2601 Modeler DbImport: result dialog issues
 CAY-2603 NPE reloading project in the model
 CAY-2605 Modeler: Unable to save - java.nio.file.InvalidPathException
 CAY-2606 Can't resolve obj path with embeddable component
+CAY-2608 CayenneModeler: NPE when reverse engineering with an auto-adapter DataSource
 
 ----------------------------------
 Release: 4.1.B2
